# waylandeglinfo

./: CMakeLists.txt  COPYING  README.md  buildme.sh  waylandes2info.c
